Compass fixes (#339)
Quest entries now use world names as a prerequisite, instead of appending a warning message if you're on the wrong world. Quests entries without world names specified will still display on any world
Fixed Quest Compasses never actually pointing to the correct location on other worlds
Fixed a Quest Compass log error

---------

Co-authored-by: Byron Marohn <Combustible@live.com>