@@ -4,11 +4,12 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.playmonumenta.scriptedquests.Plugin;
+import com.playmonumenta.scriptedquests.managers.QuestCompassManager;
 import com.playmonumenta.scriptedquests.quests.QuestContext;
+import com.playmonumenta.scriptedquests.utils.WorldRegexMatcher;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
-import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.entity.Player;
@@ -32,7 +33,7 @@ public class CompassLocation implements QuestLocation {
 			throw new Exception("Failed to parse location prerequisites!");
 		}
 
-		mWorldRegex = object.has("world_name") ? object.get("world_name").toString().replaceAll("\"", "") : Bukkit.getWorlds().get(0).getName();
+		mWorldRegex = object.has("world_name") ? object.get("world_name").toString().replaceAll("\"", "") : ".*";
 
 		mPrerequisites = new QuestPrerequisites(prereq);
 
@@ -115,7 +116,7 @@ public class CompassLocation implements QuestLocation {
 
 	@Override
 	public Location getLocation() {
-		return mWaypoints.get(mWaypoints.size() - 1);
+		return mWaypoints.getLast();
 	}
 
 	@Override
@@ -135,6 +136,13 @@ public class CompassLocation implements QuestLocation {
 
 	@Override
 	public boolean prerequisiteMet(Player player) {
-		return mPrerequisites == null || mPrerequisites.prerequisiteMet(new QuestContext(Plugin.getInstance(), player, null));
+		if (mPrerequisites != null && !mPrerequisites.prerequisiteMet(new QuestContext(Plugin.getInstance(), player, null))) {
+			return false;
+		}
+		WorldRegexMatcher matcher = QuestCompassManager.getInstance().getWorldRegexMatcher();
+		if (matcher != null) {
+			return matcher.matches(player.getWorld(), mWorldRegex);
+		}
+		return player.getWorld().getName().matches(mWorldRegex);
 	}
 }
